src/objects/CTCT2__Mapping__c.object
<CustomObject>
    <fields>
        <fullName>CTCT2__CTCT_Field_Name__c</fullName>
        <label>Constant Contact Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCT2__SF_Field_Name__c</fullName>
        <label>Salesforce Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCT2__SF_Object__c</fullName>
        <label>Salesforce Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Constant Contact Mapping</label>
    <listViews>
        <fullName>CTCT2__All</fullName>
        <columns>NAME</columns>
        <columns>CTCT2__CTCT_Field_Name__c</columns>
        <columns>CTCT2__SF_Object__c</columns>
        <columns>CTCT2__SF_Field_Name__c</columns>
        <columns>CTCT2__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAP-{00}</displayFormat>
        <label>Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Constant Contact Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CTCT2__Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( CTCT2__CTCT_Field_Name__c ) ||  ISPICKVAL(CTCT2__Type__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Type and Constant Contact Field Name must be populated.</errorMessage>
    </validationRules>
</CustomObject>